style: fix overflow of text

--- a/src/index.css
+++ b/src/index.css
@@ -19,20 +19,19 @@ body {
   border-radius: 2rem;
   overflow: hidden;
   border: solid 1px #3b494f4c;
+  margin: 0.4rem;
 }
 
 .img-section {
   width: 100%;
   height: 50%;
   padding: 0.3rem;
-  background-color: #fabd46;
 }
 #product-img {
   height: 100%;
   width: 100%;
   object-fit: contain;
   object-position: center;
-  mix-blend-mode: multiply;
 }
 
 .details-section {
@@ -45,6 +44,10 @@ body {
   font-weight: 500;
   color: #20292c;
   padding-bottom: 0.4rem;
+  height: 2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .ratings-section {
   width: 100%;
@@ -68,6 +71,10 @@ body {
   font-size: 0.8rem;
   color: #3b494f;
   padding: 0.3rem 0rem;
+  height: 4.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 #product-category {
   border-radius: 20rem;
